--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:title" content="AgenticForge - Transform Your Business with AI Automation" />
     <meta property="og:description" content="Professional AI automation agency building sophisticated AI agents and workflow automations using cutting-edge technologies like n8n and LangGraph." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/assets/heroLogo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@atenticforge.tech" />
+    <meta name="twitter:image" content="src/assets/heroLogo.png" />
   </head>
 
   <body>
