--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:title" content="AgenticForge - Transform Your Business with AI Automation" />
     <meta property="og:description" content="Professional AI automation agency building sophisticated AI agents and workflow automations using cutting-edge technologies like n8n and LangGraph." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="src/assets/heroLogo.png" />
+    <meta property="og:image" content="/heroLogo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@atenticforge.tech" />
-    <meta name="twitter:image" content="src/assets/heroLogo.png" />
+    <meta name="twitter:image" content="/heroLogo.png" />
     
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
