--- a/index.html
+++ b/index.html
@@ -17,7 +17,22 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://agenticforge.tech/" />
     <meta property="og:title" content="AgenticForge - AI Automation & Custom AI Agents for Business Transformation" />
-    <meta property="og:description" content="Transform your business with AgenticForge's intelligent AI automation. We build sophisticated AI agents, chatbots, voicebots, and workflow automations using cutting-edge AI technologies." />
+        <meta property="og:description" content="Transform your business with AgenticForge's intelligent AI automation. We build sophisticated AI agents, chatbots, voicebots, and workflow automations using cutting-edge AI technologies." />
+    
+    <!-- Single Page App Redirect Script -->
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
+```
     <meta property="og:image" content="/heroLogo.png" />
     <meta property="og:site_name" content="AgenticForge" />
 
