--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </script>
     
     <!-- Single Page App Redirect Script -->
-    <script>
+    <!-- <script>
       (function() {
         const l = window.location;
         if (l.search.includes('/~and~')) {
@@ -81,7 +81,7 @@
           window.history.replaceState(null, '', newUrl);
         }
       })();
-      </script>
+      </script> -->
       
   </head>
 
